# rich_heatmap

./: LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
rich_heatmap/: heatmap.py
